# opsdesk-platform

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.toolbox.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py
apps/api/app/: db.py  logging.py  main.py  metrics.py  models.py  queue.py
apps/api/app/routes/: changes.py  health.py  stats.py
apps/api/tests/: conftest.py
apps/frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
apps/frontend/src/: App.tsx
apps/worker/: Dockerfile  pyproject.toml  requirements.txt
apps/worker/tests/: test_import.py
apps/worker/worker/: db.py  logging.py  main.py  models.py  tasks.py
docs/: runbook.md
infra/ci/: frontend.test.Dockerfile
infra/devops-toolbox/: Dockerfile
infra/helm-values/: kube-prometheus-stack.values.yaml  loki.values.yaml  promtail.values.yaml
k8s/base/: api.deployment.yaml  api.service.yaml  configmap.yaml  frontend.deployment.yaml  frontend.service.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.service.yaml  postgres.statefulset.yaml  rbac.yaml  redis.deployment.yaml  redis.service.yaml  serviceaccounts.yaml  worker.deployment.yaml
k8s/observability/: alerts.prometheusrule.yaml  api.servicemonitor.yaml  grafana.ingress.yaml  kustomization.yaml
k8s/observability/dashboards/: api.dashboard.json  (+1 more)
scripts/: bootstrap.sh  build.sh  deploy.sh  lib.sh  lint.sh  migrate.sh  rollback.sh  scan.sh  secrets.sh  smoke.sh  test.sh
(+11 files in other folders)
