[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "opsdesk-worker"
version = "0.1.0"
dependencies = [
  "python-json-logger==2.0.7",
  "celery[redis]==5.4.0",
  "redis==5.1.1",
  "sqlalchemy==2.0.46",
  "psycopg[binary]==3.2.2",

]

[project.optional-dependencies]
dev = [
  "ruff==0.6.9",
  "pytest==8.3.3",
]
